Ajuste no relatório por cliente

--- a/templates/index.html
+++ b/templates/index.html
@@ -84,10 +84,10 @@
                 <div class="accordion-body">
                     <div class="row g-3">
                         <div class="col-md-4">
-                            <a href="{{ url_for('cadastrar_cliente') }}" class="btn btn-outline-primary w-100">Clientes</a>
+                            <a href="{{ url_for('listar_clientes') }}" class="btn btn-outline-primary w-100">Clientes</a>
                         </div>
                         <div class="col-md-4">
-                            <a href="{{ url_for('cadastrar_rateio') }}" class="btn btn-outline-primary w-100">Rateios</a>
+                            <a href="{{ url_for('listar_rateios') }}" class="btn btn-outline-primary w-100">Rateios</a>
                         </div>
                         <div class="col-md-4">
                             <a href="{{ url_for('faturamento') }}" class="btn btn-outline-primary w-100">Faturamento</a>
