--- a/templates/cadastrar_cliente.html
+++ b/templates/cadastrar_cliente.html
@@ -35,12 +35,21 @@
                 <input class="form-check-input" type="checkbox" name="mostrar_saldo" id="mostrar_saldo" checked>
                 <label class="form-check-label" for="mostrar_saldo">
                     Mostrar Saldo Acumulado no Relatório
-                </label>                
+                </label>
             </div>
+
             <div class="form-check mt-2 ms-3">
                 <input class="form-check-input" type="checkbox" id="consumo_instantaneo" name="consumo_instantaneo">
                 <label class="form-check-label" for="consumo_instantaneo">
                     Cliente com Consumo Instantâneo
+                </label>
+            </div>
+
+            <!-- ✅ Novo checkbox: Cliente ativo -->
+            <div class="form-check mt-2 ms-3">
+                <input class="form-check-input" type="checkbox" id="ativo" name="ativo" checked>
+                <label class="form-check-label" for="ativo">
+                    Cliente ativo
                 </label>
             </div>
 
@@ -70,7 +79,7 @@
             </div>
             <div class="col-md-6">
                 <label for="senha_concessionaria" class="form-label">Senha da Concessionária</label>
-                <input type="text" class="form-control" id="senha_concessionaria" name="senha_concessionaria">
+                <input type="password" class="form-control" id="senha_concessionaria" name="senha_concessionaria">
             </div>
 
             <div class="form-check mt-2 ms-3">
