Novos templat de listar e editar injeção

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
                             <a href="{{ url_for('baixar_fatura') }}" class="btn btn-outline-primary w-100">Baixar Fatura</a>
                         </div>
                         <div class="col-md-4">
-                            <a href="{{ url_for('cadastrar_injecao') }}" class="btn btn-outline-primary w-100">Cadastrar Injeção</a>
+                            <a href="{{ url_for('listar_injecoes_mensais') }}" class="btn btn-outline-primary w-100">Cadastrar Injeção</a>
                         </div>
                     </div>
                 </div>
