--- a/templates/cadastrar_injecao.html
+++ b/templates/cadastrar_injecao.html
@@ -42,7 +42,7 @@
 
         <div class="col-12 text-end">
             <button type="submit" class="btn btn-success">Salvar</button>
-            <a href="{{ url_for('index') }}" class="btn btn-secondary">Cancelar</a>
+            <a href="{{ url_for('listar_injecoes_mensais') }}" class="btn btn-secondary">Cancelar</a>
         </div>
     </form>
 </div>
