Ajuste no relatório por usina à recuperar 2

--- a/templates/relatorio_financeiro_com_perda.html
+++ b/templates/relatorio_financeiro_com_perda.html
@@ -232,8 +232,8 @@
                         {{ (item.perda_total + item.saldo_kwh) | formato_kwh }}
                     </td>
                     <td class="text-success">{{ item.saldo_kwh | formato_kwh }}</td>
-                    <td>{{ item.ultimo_saldo    | formato_kwh }}</td>
-                    {% set a_recuperar = (item.geracao_total - item.perda_total - item.injecao_total - item.saldo_kwh) %}
+                    <td>{{ item.ultimo_saldo | formato_kwh }}</td>
+                    {% set a_recuperar = (item.geracao_total - (item.perda_total + item.saldo_kwh) - item.injecao_total - item.saldo_kwh) %}
                     <td>
                     {% if a_recuperar > 0 %}
                         <span class="badge bg-warning text-dark">À recuperar</span>
